# bcstats

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/http/: httplib.hpp
src/: CMakeLists.txt  HistoryAnalyzer.cpp  HistoryAnalyzer.hpp  HistorySource.hpp  HistorySourceFile.cpp  HistorySourceFile.hpp  HistorySourceHTTP.cpp  HistorySourceHTTP.hpp  main.cpp
tests/: tests.cpp
